--- a/STDShop.Web/Views/Admin/Index.cshtml
+++ b/STDShop.Web/Views/Admin/Index.cshtml
@@ -14,16 +14,11 @@
 </head>
 <body>
     <div ng-controller="schoolController">
-        <div ng-controller="studentController">
-            10 + 20 = {{10+20}}
-            {{message}}
-        </div>
-        <div ng-controller="teacherController">
-            10 + 20 = {{10+20}}
-            {{message}}
-        </div>
+        <input type="number" ng-model="num"/> value of text {{num}}
+        <button ng-click="checkNumber()">Check Number</button>
+        <br />
         {{message}}
     </div>
-    
+   
 </body>
 </html>
