--- a/STDShop.Web/Views/Admin/Index.cshtml
+++ b/STDShop.Web/Views/Admin/Index.cshtml
@@ -14,6 +14,7 @@
 </head>
 <body>
     <div ng-controller="schoolController">
+        <std-shop-directive></std-shop-directive>
         <input type="number" ng-model="num"/> value of text {{num}}
         <button ng-click="checkNumber()">Check Number</button>
         <br />
