--- a/STDShop.Web/Views/Admin/Index.cshtml
+++ b/STDShop.Web/Views/Admin/Index.cshtml
@@ -5,21 +5,12 @@
 
 <!DOCTYPE html>
 
-<html ng-app ="myModule">
+<html>
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
-    <script src="~/Scripts/plugins/angular/angular.js"></script>
-    <script src="~/Scripts/spa/app.js"></script>
 </head>
 <body>
-    <div ng-controller="schoolController">
-        <std-shop-directive></std-shop-directive>
-        <input type="number" ng-model="num"/> value of text {{num}}
-        <button ng-click="checkNumber()">Check Number</button>
-        <br />
-        {{message}}
-    </div>
    
 </body>
 </html>
