--- a/STDShop.Web/app/components/product_categories/productCategoryListView.html
+++ b/STDShop.Web/app/components/product_categories/productCategoryListView.html
@@ -22,6 +22,17 @@
     </div>
     <div class="box-body">
       <div class="row">
+          <div class="col-md-6">
+              <div class="input-group">
+                  <input type="text" class="form-control" ng-model="keyword" placeholder="Search for...">
+                  <span class="input-group-btn">
+                      <button class="btn btn-default" type="button" ng-click="search()">Tìm kiếm</button>
+                  </span>
+              </div><!-- /input-group -->
+          </div>
+      </div>
+      <br />
+      <div class="row">
         <div class="col-md-12">
           <table class="table table-bordered">
             <tr>
@@ -43,6 +54,11 @@
                     <button class="btn  btn-sm btn-danger"><i class="fa fa-trash"></i></button>
                 </td>
             </tr>
+              <tfoot>
+                  <tr>
+                      <td colspan="4">Tổng số bản ghi: {{totalCount}}</td>
+                  </tr>
+              </tfoot>
           </table>
         </div>
       </div>
