--- a/STDShop.Web/app/components/product_categories/productCategoryListView.html
+++ b/STDShop.Web/app/components/product_categories/productCategoryListView.html
@@ -32,6 +32,7 @@
           </div>
           <div class="col-md-6">
               <button class="btn btn-success" ui-sref="add_product_category">Thêm mới</button>
+              <button class="btn btn-danger" ng-click="deleteMultiple()" id="btnDelete" disabled>Xóa</button>
           </div>
       </div>
       <br />
@@ -39,6 +40,7 @@
         <div class="col-md-12">
           <table class="table table-bordered">
             <tr>
+                <td><input name="all" type="checkbox" ng-click="selectAll()" /></td>
                 <th style="width: 5%">ID</th>
                 <th style="width:55%">Tên danh mục</th>
                 <th style="width: 20%">Ngày tạo</th>
@@ -46,6 +48,7 @@
                 <th style="width: 10%">Thao tác</th>
             </tr>
             <tr ng-repeat="item in productCategories">
+              <td><input type="checkbox" ng-model="item.checked" name="all" /></td>
               <td>{{item.ID}}</td>
               <td>{{item.Name}}</td>
               <td>
@@ -59,7 +62,7 @@
             </tr>
               <tfoot>
                   <tr>
-                      <td colspan="5"><span class="pull-right">Trang: {{page+1}} - Tổng số bản ghi: {{totalCount}}</span></td>
+                      <td colspan="6"><span class="pull-right">Trang: {{page+1}} - Tổng số bản ghi: {{totalCount}}</span></td>
                   </tr>
               </tfoot>
           </table>
