Commit fix role system management

--- a/STDShop.Web/app/components/application_roles/applicationRoleEditView.html
+++ b/STDShop.Web/app/components/application_roles/applicationRoleEditView.html
@@ -5,7 +5,7 @@
   <ol class="breadcrumb">
     <li><a href="/admin"><i class="fa fa-dashboard"></i> Trang chủ</a></li>
     <li><a ui-sref="app_roles">Danh mục quyền</a></li>
-    <li class="active"><a href="#">Thêm mới</a></li>
+    <li class="active"><a href="#">Cập nhật</a></li>
   </ol>
 </section>
 <section class="content">
@@ -36,7 +36,7 @@
 
               <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
-                  <a ui-sref="app_roles" class="btn btn-default">Hủy bỏ</a>
+                  <a ui-sref="application_roles" class="btn btn-default">Hủy bỏ</a>
                   <input type="submit" ng-disabled="frmUpdateAppRole.$invalid" class="btn btn-primary" value="Lưu lại" />
                 </div>
               </div>
