--- a/STDShop.Web/app/components/post_categories/postCategoryAddView.html
+++ b/STDShop.Web/app/components/post_categories/postCategoryAddView.html
@@ -23,7 +23,7 @@
         <div class="form-group">
           <label for="inputEmail3" class="col-sm-2 control-label">Tên danh mục</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" ng-maxlength="256" required name="name" ng-change="GetSeoTitle()" ng-model="PostCategory.Name">
+            <input type="text" class="form-control" ng-maxlength="256" required name="name" ng-change="GetSeoTitle()" ng-model="postCategory.Name">
               <span ng-show="frmAddPostCategory.name.$invalid" class="has-error">Phải nhập tên danh mục</span>
               <span ng-show="frmAddPostCategory.name.$error.maxlength" class="has-error">Tên danh mục chỉ được 256 ký tự</span>
           </div>
@@ -31,7 +31,7 @@
         <div class="form-group">
           <label for="inputEmail3" class="col-sm-2 control-label">Tiêu đề SEO</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" name="alias" ng-maxlength="500" required ng-model="PostCategory.Alias">
+            <input type="text" class="form-control" name="alias" ng-maxlength="500" required ng-model="postCategory.Alias">
             <span ng-show="frmAddPostCategory.alias.$invalid" class="has-error">Phải nhập tiêu đề SEO</span>
             <span ng-show="frmAddPostCategory.alias.$error.maxlength" class="has-error">Tiêu đề SEO chỉ được 256 ký tự</span>
           </div>
@@ -39,30 +39,30 @@
         <div class="form-group">
           <label for="inputEmail3" class="col-sm-2 control-label">Mô tả ngắn</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" name="description" ng-maxlength="500" ng-model="PostCategory.Description">
+            <input type="text" class="form-control" name="description" ng-maxlength="500" ng-model="postCategory.Description">
               <span ng-show="frmAddPostCategory.description.$error.maxlength" class="has-error">Mô tả chỉ được 500 ký tự</span>
           </div>
         </div>
         <div class="form-group">
           <label for="inputEmail3" class="col-sm-2 control-label">Danh mục cha</label>
           <div class="col-sm-10">
-           <select name="parentId" class="form-control" ng-model="PostCategory.ParentID" ng-options="option.ID as option.Name for option in parentCategories">
+           <select name="parentId" class="form-control" ng-model="postCategory.ParentID" ng-options="option.ID as option.Name for option in parentCategories">
              <option value="">Danh mục gốc</option>
            </select>
-            <input type="hidden" name="parentId" ng-model="PostCategory.ParentID" />
+            <input type="hidden" name="parentId" ng-model="postCategory.ParentID" />
           </div>
         </div>
         <div class="form-group">
           <label for="inputEmail3" class="col-sm-2 control-label">Thứ tự</label>
           <div class="col-sm-10">
-            <input type="number" class="form-control" name="displayOrder" required ng-model="PostCategory.DisplayOrder">
+            <input type="number" class="form-control" name="displayOrder" required ng-model="postCategory.DisplayOrder">
               <span ng-show="frmAddPostCategory.displayOrder.$invalid" class="has-error">Phải nhập thứ tự</span>
           </div>
         </div>
         <div class="form-group">
           <label for="inputEmail3" class="col-sm-2 control-label">Hình ảnh</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" name="image" ng-maxlength="256" ng-model="PostCategory.Image">
+            <input type="text" class="form-control" name="image" ng-maxlength="256" ng-model="postCategory.Image">
               <span ng-show="frmAddPostCategory.image.$error.maxlength" class="has-error">Hình ảnh chỉ được 256 ký tự</span>
 
           </div>
@@ -70,32 +70,32 @@
         <div class="form-group">
           <label for="inputEmail3" class="col-sm-2 control-label">Meta Keyword</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" name="metaKeyword" ng-model="PostCategory.MetaKeyword">
+            <input type="text" class="form-control" name="metaKeyword" ng-model="postCategory.MetaKeyword">
           </div>
         </div>
         <div class="form-group">
           <label for="inputEmail3" class="col-sm-2 control-label">Meta Description</label>
           <div class="col-sm-10">
-            <textarea class="form-control" name="metaKeyword" ng-model="PostCategory.MetaDescription"></textarea>
+            <textarea class="form-control" name="metaKeyword" ng-model="postCategory.MetaDescription"></textarea>
           </div>
         </div>
         <div class="form-group">
           <div class="col-sm-offset-2 col-sm-10">
             <div class="checkbox">
               <label>
-                <input type="checkbox" name="status" ng-model="PostCategory.Status" ng-checked="PostCategory.Status"> Kích hoạt
+                <input type="checkbox" name="status" ng-model="postCategory.Status" ng-checked="postCategory.Status"> Kích hoạt
               </label>
             </div>
             <div class="checkbox">
               <label>
-                <input type="checkbox" name="homeFlag" ng-model="PostCategory.HomeFlag" ng-checked="PostCategory.HomeFlag"> Hiển thị trang chủ
+                <input type="checkbox" name="homeFlag" ng-model="postCategory.HomeFlag" ng-checked="postCategory.HomeFlag"> Hiển thị trang chủ
               </label>
             </div>
           </div>
         </div>
       </div><!-- /.box-body -->
       <div class="box-footer">
-        <button ui-sref="Post_categories" class="btn btn-default">Hủy</button>
+        <button ui-sref="post_categories" class="btn btn-default">Hủy</button>
         <button type="submit" ng-disabled="frmAddPostCategory.$invalid" class="btn btn-success pull-right">Lưu</button>
       </div><!-- /.box-footer -->
     </form>
