--- a/STDShop.Web/app/components/post_categories/postCategoryEditView.html
+++ b/STDShop.Web/app/components/post_categories/postCategoryEditView.html
@@ -5,8 +5,8 @@
     </h1>
     <ol class="breadcrumb">
         <li><a href="#"><i class="fa fa-dashboard"></i> Trang chủ</a></li>
-        <li><a href="#">Sản phẩm</a></li>
-        <li><a ui-sref="product_categories">Danh mục</a></li>
+        <li><a href="#">Bài viết</a></li>
+        <li><a ui-sref="post_categories">Danh mục</a></li>
         <li class="active">Cập nhật</li>
     </ol>
 </section>
